# pawpet-arduino

./: .clang-format  .gitignore  LICENSE  README.md  Untitled-2.md  pawos.ino  power_todo.txt  regdump.txt
board/: boards.txt  package_pawpet_index.json  platform.txt  programmers.txt
board/bootloader/: bootloader-pawpet_m0-v3.14.0.elf  bootloader-pawpet_m0-v3.14.0.map  update-bootloader-pawpet_m0-v3.14.0.elf  update-bootloader-pawpet_m0-v3.14.0.ino  update-bootloader-pawpet_m0-v3.14.0.map  update-bootloader-pawpet_m0-v3.14.0.uf2
board/pawpet/: boards.txt  platform.txt
board/pawpet-1.0.1/: boards.txt  platform.txt
board/pawpet-1.0.2/: boards.txt  platform.txt
board/setup/: pawos_setup.hex
case/: pawsome-v7-debug-r3-back.stl  pawsome-v7-debug-r3-battery-door.stl  pawsome-v7-debug-r3-pawPad.stl  pawsome-v8-prod-r1-battery-door.stl  pawsome-v8-prod-r1-pawPad.stl
kicad/: pawpet-v6.kicad_pcb  pawpet.kicad_pcb  pawpet.kicad_sch
paw-case/: pawsome-v6-debug-r2-dPad.stl  pawsome-v6-debug-r2-pawPad.stl  pawsome-v6-debug-r3-back.stl  pawsome-v6-debug-r3-battery-lid.stl  pawsome-v6-debug-r3-front.stl  pawsome-v7-debug-r2-back_old.stl  pawsome-v7-debug-r2-battery-door.stl  pawsome-v7-debug-r2-front.stl  pawsome-v7-debug-r3-back.stl  pawsome-v7-debug-r3-dPad.stl  pawsome-v7-debug-r3-front.stl  pawsome-v7-debug-r3-pawPad.stl  pawsome-v8-prod-r1-back.stl  pawsome-v8-prod-r1-dPad.stl  pawsome-v8-prod-r1-front.stl
png2c/: png2c.py
simulator/: .gitignore  CMakeLists.txt  main.cpp  notes.md  pawos.cpp  pawos.h  pawpet.html
simulator/fork/: Adafruit_GFX.cpp  Adafruit_GFX.h  Print.cpp  Print.h  display.cpp
src/: common.h  config.h  gamestate.h  global.cpp  global.h  graphic_manager.cpp  graphic_manager.h  pet_display.cpp  pet_display.h  pet_graphics.h  pitches.h
src/graphics/: display.cpp  display.h  graphic_manager.cpp  graphic_manager.h  graphics.cpp  graphics.h  sprites.h  (+2 more)
tools/: bootloader.jlink  jlinkscript.sh  os.jlink  pawos_setup.hex  set_0xFA_protect.mot  set_0xFF_noprotect.mot  setup.jlink
(+32 files in other folders)
